--- a/app/src/main/res/layout/fragment_codechef.xml
+++ b/app/src/main/res/layout/fragment_codechef.xml
@@ -1,19 +1,37 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:animateLayoutChanges="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/anim_1"
-        android:layout_width="300dp"
-        app:lottie_loop="true"
-        android:layout_height="300dp"
-        app:layout_constraintBottom_toBottomOf="@+id/mainview"
+    android:id="@+id/anim_1"
+    android:layout_width="150dp"
+    app:lottie_loop="true"
+    android:layout_height="150dp"
+    app:lottie_fileName="anim_main.json"
+    app:lottie_autoPlay="true"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/codechef_errorState"
+        android:layout_width="wrap_content"
+        android:textAlignment="center"
+        android:padding="30dp"
+        android:layout_height="wrap_content"
+        android:text="@string/error"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        style="@style/TextAppearance.AppCompat.Medium"
+        android:drawablePadding="10dp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/mainview"
-        app:lottie_fileName="anim_main.json"
-        app:lottie_autoPlay="true"/>
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:drawableTopCompat="@drawable/ic_nointernet" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:visibility="gone"
