--- a/app/src/main/res/layout/fragment_codeforces.xml
+++ b/app/src/main/res/layout/fragment_codeforces.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+    <TextView
+        android:id="@+id/codeforces_errorState"
+        android:layout_width="wrap_content"
+        android:textAlignment="center"
+        android:padding="30dp"
+        android:layout_height="wrap_content"
+        android:text="@string/error"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
+        style="@style/TextAppearance.AppCompat.Medium"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        app:drawableTopCompat="@drawable/ic_nointernet" />
+
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/anim_2"
-        android:layout_width="300dp"
+        android:layout_width="150dp"
         app:lottie_loop="true"
-        android:scaleType="centerCrop"
-        android:layout_height="300dp"
+        android:layout_height="150dp"
         app:lottie_fileName="anim_main.json"
         app:lottie_autoPlay="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +66,6 @@
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/test"
                     app:layout_collapseMode="parallax" />
 
 
